[project]
name = "comfyui-jetblock-optimizer"
version = "2.0.0"
description = "Revolutionary performance optimization for ComfyUI with ThinkingMachines deterministic mode"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Joseph Ibrahim", email = "joseph@josephibrahim.com"}
]
keywords = [
    "comfyui",
    "optimization",
    "rtx4090",
    "diffusion",
    "deterministic",
    "reproducible",
    "nemotron"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/JosephTheBoss/comfyui-jetblock-optimizer"
Repository = "https://github.com/JosephTheBoss/comfyui-jetblock-optimizer"
Issues = "https://github.com/JosephTheBoss/comfyui-jetblock-optimizer/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
